# cpp-template-project

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  conanfile.txt
.github/workflows/: build.yml  ci.yml  codeql.yml
cmake/: CodeCoverage.cmake  CompilerWarnings.cmake  Config.cmake.in  Doxygen.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  SampleClass.cpp  SampleClass.h
test/: CMakeLists.txt  SampleTest.cpp
tests/: CMakeLists.txt  SampleTest.cpp
